--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello nerds!</title>
+	<meta charset="utf-8">
+	<title>Are You A Gamer</title>
+	<link rel="stylesheet" type="text/css" href="index-style.css">
 </head>
 <body>
-<h1>hello nerds! not really love yall!!!</h1>
+	<h1 id="top">Top Of The World</h1>
+
+	<div>
+		<a href="default.html" title="Example Web">
+		Default <br> Web
+		</a>
+	</div>
+
+	<div><img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/df/Keaton_as_Batman.jpg/175px-Keaton_as_Batman.jpg" width="150px" height="200px" alt="Keaton_as_Batman"></div>
+
+	<span class="boxType">box 1</span> <span>box 2</span>
+	<p>Teleporter: <a href="#top">Going Up!</a></p>
 </body>
 </html>
